# spark_iceberg_schema_evolution

./: .gitattributes  .gitignore  README.md  conda_env.yml  env.sh  pyproject.toml  requirements.txt  setup.py
notebooks/: parquet_orc_avro_samples.ipynb
sh/: download_libs.sh
src/config/: settings.py
src/jobs/: fake_job.py  job.py
src/utils/: fake_data.py  run_query.py  spark_utils.py
src/utils/spark/: spark_utils.py  type_utils.py
tests/: conftest.py  test_example_job.py
tests/integration/: test_job_flow.py
tests/unit/: test_aws_config.py  test_spark_utils.py
