[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schema_evolution"
version = "0.1.0"
description = "A PySpark project for schema evolution"
authors = [
    {name = "Ander Maco", email = "andermaco@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyspark>=3.0.0",
    "pandas>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-spark",
    "pytest-cov",
    "black",
    "flake8",
    "isort",
    "mypy",
]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src"

[project.urls]
repository = "https://github.com/yourusername/schema_evolution" 